crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_overapplied.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data constrData 59 (con (list data) [(I 42)]) 0 of
  DataConstr pair#8 -> pair#8
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_9
    (force
      [[[[[[(force (builtin chooseData)) generated_9]
        (delay [(lam pair_8 pair_8) [(builtin unConstrData) generated_9]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [[[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]
      (con integer 0)]])
--- optimized Core
let anf#2 : Data = constrData 59 (con (list data) [(I 42)]) in
let anf#3 : Data = anf#2 0 in
case@Data anf#3 of
  DataConstr pair#1 -> pair#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam anf_4
      [(lam anf_5
        [(lam generated_7
          (force
            [[[[[[builtin_8 generated_7]
              (delay [(lam pair_6 pair_6) [(builtin unConstrData) generated_7]])]
              (delay (error))]
              (delay (error))]
              (delay (error))]
              (delay (error))]))
          anf_5])
        [anf_4 (con integer 0)]])
      [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#9 : Data = constrData 59 (con (list data) [(I 42)]) in
let anf#10 : Data = anf#9 0 in
case@Data anf#10 of
  DataConstr pair#8 -> pair#8
--- isolated folded Core
let anf#9 : Data = constrData 59 (con (list data) [(I 42)]) in
let anf#10 : Data = anf#9 0 in
case@Data anf#10 of
  DataConstr pair#8 -> pair#8
--- isolated cleaned Core
let anf#9 : Data = constrData 59 (con (list data) [(I 42)]) in
let anf#10 : Data = anf#9 0 in
case@Data anf#10 of
  DataConstr pair#8 -> pair#8
--- isolated UPLC before
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam generated_11
        (force
          [[[[[[(force (builtin chooseData)) generated_11]
            (delay [(lam pair_8 pair_8) [(builtin unConstrData) generated_11]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_10])
      [anf_9 (con integer 0)]])
    [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam generated_11
        (force
          [[[[[[(force (builtin chooseData)) generated_11]
            (delay [(lam pair_8 pair_8) [(builtin unConstrData) generated_11]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_10])
      [anf_9 (con integer 0)]])
    [[(builtin constrData) (con integer 59)] (con (list data) [(I 42)])]])
--- result
error: NonFunctionApplication(Con(Integer(0)), Con(Data(Constr { tag: 59, fields: [Integer(42)] })))
--- logs
[]
