crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data constrData 59 of
  DataConstr pair#6 -> pair#6
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_7
    (force
      [[[[[[(force (builtin chooseData)) generated_7]
        (delay [(lam pair_6 pair_6) [(builtin unConstrData) generated_7]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin constrData) (con integer 59)]])
--- optimized Core
let anf#2 : Data = constrData 59 in
case@Data anf#2 of
  DataConstr pair#1 -> pair#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          (case
            (constr 0
              generated_5
              (delay [(builtin unConstrData) generated_5])
              (delay (error))
              (delay (error))
              (delay (error))
              (delay (error)))
            builtin_6)))
        anf_3])
      [(builtin constrData) (con integer 59)]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#7 : Data = constrData 59 in
case@Data anf#7 of
  DataConstr pair#6 -> pair#6
--- isolated folded Core
let anf#7 : Data = constrData 59 in
case@Data anf#7 of
  DataConstr pair#6 -> pair#6
--- isolated cleaned Core
let anf#7 : Data = constrData 59 in
case@Data anf#7 of
  DataConstr pair#6 -> pair#6
--- isolated UPLC before
(program 1.1.0
  [(lam anf_7
    [(lam generated_8
      (force
        [[[[[[(force (builtin chooseData)) generated_8]
          (delay [(lam pair_6 pair_6) [(builtin unConstrData) generated_8]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_7])
    [(builtin constrData) (con integer 59)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_7
    [(lam generated_8
      (force
        [[[[[[(force (builtin chooseData)) generated_8]
          (delay [(lam pair_6 pair_6) [(builtin unConstrData) generated_8]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_7])
    [(builtin constrData) (con integer 59)]])
--- result
error: NotAConstant(Builtin(Runtime { args: [Con(Integer(59))], fun: ConstrData, forces: 0 }))
--- logs
[]
