crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_0_empty_false_parameter_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data constrData 0 (con (list data) [(I 42)]) of
  DataConstr pair#3 -> pair#3
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_4
    (force
      [[[[[[(force (builtin chooseData)) generated_4]
        (delay [(lam pair_3 pair_3) [(builtin unConstrData) generated_4]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
--- optimized Core
let anf#2 : Data = constrData 0 (con (list data) [(I 42)]) in
case@Data anf#2 of
  DataConstr pair#1 -> pair#1
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam builtin_7
      [(lam partial_8
        [(lam anf_3
          [(lam generated_6
            (force
              [[[[[[builtin_7 generated_6]
                (delay [(lam pair_4 pair_4) [(builtin unConstrData) generated_6]])]
                (delay (force [partial_8 (delay (error))]))]
                (delay (force [partial_8 (delay (error))]))]
                (delay (force [partial_8 (delay (error))]))]
                (delay (force [partial_8 (delay (error))]))]))
            anf_3])
          [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
        [builtin_5 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : Data = constrData 0 (con (list data) [(I 42)]) in
case@Data anf#4 of
  DataConstr pair#3 -> pair#3
  _ -> trace "cold" in error
--- isolated folded Core
let anf#4 : Data = constrData 0 (con (list data) [(I 42)]) in
let pair#3 : pair int (list Data) = unConstrData anf#4 in
pair#3
--- isolated cleaned Core
let anf#4 : Data = constrData 0 (con (list data) [(I 42)]) in
unConstrData anf#4
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam generated_5
      (force
        [[[[[[(force (builtin chooseData)) generated_5]
          (delay [(lam pair_3 pair_3) [(builtin unConstrData) generated_5]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      anf_4])
    [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4 [(builtin unConstrData) anf_4])
    [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
--- result
(con (pair integer (list data)) (0, [(I 42)]))
--- logs
[]
