crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_0_empty_false_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\tag#5 : int fields#6 : list Data -> case@Data constrData tag#5 fields#6 of
  DataConstr pair#7 -> pair#7
  _ -> trace "cold" in error) 0 (con (list data) [(I 42)])
--- unoptimized UPLC
(program 1.1.0
  [[(lam tag_5
    (lam fields_6
      [(lam generated_8
        (force
          [[[[[[(force (builtin chooseData)) generated_8]
            (delay [(lam pair_7 pair_7) [(builtin unConstrData) generated_8]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        [[(builtin constrData) tag_5] fields_6]]))
    (con integer 0)]
    (con (list data) [(I 42)])])
--- optimized Core
let anf#4 : Data = constrData 0 (con (list data) [(I 42)]) in
case@Data anf#4 of
  DataConstr pair#3 -> pair#3
  _ -> trace "cold" in error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_5
      [(lam partial_6
        [(lam anf_1
          [(lam generated_4
            (force
              [[[[[[builtin_5 generated_4]
                (delay [(lam pair_2 pair_2) [(builtin unConstrData) generated_4]])]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]
                (delay (force [partial_6 (delay (error))]))]))
            anf_1])
          [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
        [builtin_3 (con string "cold")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
(\tag#5 : int fields#6 : list Data -> let anf#8 : Data = constrData tag#5 fields#6 in
case@Data anf#8 of
  DataConstr pair#7 -> pair#7
  _ -> trace "cold" in error) 0 (con (list data) [(I 42)])
--- isolated folded Core
(\tag#5 : int fields#6 : list Data -> let anf#8 : Data = constrData tag#5 fields#6 in
let pair#7 : pair int (list Data) = unConstrData anf#8 in
pair#7) 0 (con (list data) [(I 42)])
--- isolated cleaned Core
let anf#8 : Data = constrData 0 (con (list data) [(I 42)]) in
unConstrData anf#8
--- isolated UPLC before
(program 1.1.0
  [[(lam tag_5
    (lam fields_6
      [(lam anf_8
        [(lam generated_9
          (force
            [[[[[[(force (builtin chooseData)) generated_9]
              (delay [(lam pair_7 pair_7) [(builtin unConstrData) generated_9]])]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
          anf_8])
        [[(builtin constrData) tag_5] fields_6]]))
    (con integer 0)]
    (con (list data) [(I 42)])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_8 [(builtin unConstrData) anf_8])
    [[(builtin constrData) (con integer 0)] (con (list data) [(I 42)])]])
--- result
(con (pair integer (list data)) (0, [(I 42)]))
--- logs
[]
