crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_0_empty_true_parameter_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data constrData 0 (con (list data) []) of
  DataConstr pair#11 -> pair#11
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_12
    (force
      [[[[[[(force (builtin chooseData)) generated_12]
        (delay [(lam pair_11 pair_11) [(builtin unConstrData) generated_12]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    [[(builtin constrData) (con integer 0)] (con (list data) [])]])
--- optimized Core
(con (pair integer (list data)) (0, []))
--- optimized UPLC
(program 1.1.0 (con (pair integer (list data)) (0, [])))
--- isolated pass
--- isolated ANF input
let anf#12 : Data = constrData 0 (con (list data) []) in
case@Data anf#12 of
  DataConstr pair#11 -> pair#11
  _ -> trace "cold" in error
--- isolated folded Core
let anf#12 : Data = constrData 0 (con (list data) []) in
let pair#11 : pair int (list Data) = unConstrData anf#12 in
pair#11
--- isolated cleaned Core
let anf#12 : Data = constrData 0 (con (list data) []) in
unConstrData anf#12
--- isolated UPLC before
(program 1.1.0
  [(lam anf_12
    [(lam generated_13
      (force
        [[[[[[(force (builtin chooseData)) generated_13]
          (delay [(lam pair_11 pair_11) [(builtin unConstrData) generated_13]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      anf_12])
    [[(builtin constrData) (con integer 0)] (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_12 [(builtin unConstrData) anf_12])
    [[(builtin constrData) (con integer 0)] (con (list data) [])]])
--- result
(con (pair integer (list data)) (0, []))
--- logs
[]
