crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_18446744073709551615_empty_false_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\tag#37 : int fields#38 : list Data -> case@Data constrData tag#37 fields#38 of
  DataConstr pair#39 -> pair#39
  _ -> trace "cold" in error) 18446744073709551615 (con (list data) [(I 42)])
--- unoptimized UPLC
(program 1.1.0
  [[(lam tag_37
    (lam fields_38
      [(lam generated_40
        (force
          [[[[[[(force (builtin chooseData)) generated_40]
            (delay [(lam pair_39 pair_39) [(builtin unConstrData) generated_40]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        [[(builtin constrData) tag_37] fields_38]]))
    (con integer 18446744073709551615)]
    (con (list data) [(I 42)])])
--- optimized Core
let anf#4 : Data = constrData 18446744073709551615 (con (list data) [(I 42)]) in
unConstrData anf#4
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(builtin unConstrData) anf_1])
    [[(builtin constrData) (con integer 18446744073709551615)]
      (con (list data) [(I 42)])]])
--- isolated pass
--- isolated ANF input
(\tag#37 : int fields#38 : list Data -> let anf#40 : Data = constrData tag#37 fields#38 in
case@Data anf#40 of
  DataConstr pair#39 -> pair#39
  _ -> trace "cold" in error) 18446744073709551615 (con (list data) [(I 42)])
--- isolated folded Core
(\tag#37 : int fields#38 : list Data -> let anf#40 : Data = constrData tag#37 fields#38 in
let pair#39 : pair int (list Data) = unConstrData anf#40 in
pair#39) 18446744073709551615 (con (list data) [(I 42)])
--- isolated cleaned Core
let anf#40 : Data = constrData 18446744073709551615 (con (list data) [(I 42)]) in
unConstrData anf#40
--- isolated UPLC before
(program 1.1.0
  [[(lam tag_37
    (lam fields_38
      [(lam anf_40
        [(lam generated_41
          (force
            [[[[[[(force (builtin chooseData)) generated_41]
              (delay [(lam pair_39 pair_39) [(builtin unConstrData) generated_41]])]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
          anf_40])
        [[(builtin constrData) tag_37] fields_38]]))
    (con integer 18446744073709551615)]
    (con (list data) [(I 42)])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_40 [(builtin unConstrData) anf_40])
    [[(builtin constrData) (con integer 18446744073709551615)]
      (con (list data) [(I 42)])]])
--- result
(con (pair integer (list data)) (18446744073709551615, [(I 42)]))
--- logs
[]
