crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_18446744073709551615_empty_true_parameter_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data constrData 18446744073709551615 (con (list data) []) of
  DataConstr pair#43 -> pair#43
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_44
    (force
      [[[[[[(force (builtin chooseData)) generated_44]
        (delay [(lam pair_43 pair_43) [(builtin unConstrData) generated_44]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    [[(builtin constrData) (con integer 18446744073709551615)] (con (list data) [])]])
--- optimized Core
let anf#2 : Data = constrData 18446744073709551615 (con (list data) []) in
unConstrData anf#2
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 [(builtin unConstrData) anf_1])
    [[(builtin constrData) (con integer 18446744073709551615)] (con (list data) [])]])
--- isolated pass
--- isolated ANF input
let anf#44 : Data = constrData 18446744073709551615 (con (list data) []) in
case@Data anf#44 of
  DataConstr pair#43 -> pair#43
  _ -> trace "cold" in error
--- isolated folded Core
let anf#44 : Data = constrData 18446744073709551615 (con (list data) []) in
let pair#43 : pair int (list Data) = unConstrData anf#44 in
pair#43
--- isolated cleaned Core
let anf#44 : Data = constrData 18446744073709551615 (con (list data) []) in
unConstrData anf#44
--- isolated UPLC before
(program 1.1.0
  [(lam anf_44
    [(lam generated_45
      (force
        [[[[[[(force (builtin chooseData)) generated_45]
          (delay [(lam pair_43 pair_43) [(builtin unConstrData) generated_45]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      anf_44])
    [[(builtin constrData) (con integer 18446744073709551615)] (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_44 [(builtin unConstrData) anf_44])
    [[(builtin constrData) (con integer 18446744073709551615)] (con (list data) [])]])
--- result
(con (pair integer (list data)) (18446744073709551615, []))
--- logs
[]
