crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_tag_18446744073709551615_empty_true_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\tag#45 : int fields#46 : list Data -> case@Data constrData tag#45 fields#46 of
  DataConstr pair#47 -> pair#47
  _ -> trace "cold" in error) 18446744073709551615 (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [[(lam tag_45
    (lam fields_46
      [(lam generated_48
        (force
          [[[[[[(force (builtin chooseData)) generated_48]
            (delay [(lam pair_47 pair_47) [(builtin unConstrData) generated_48]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        [[(builtin constrData) tag_45] fields_46]]))
    (con integer 18446744073709551615)]
    (con (list data) [])])
--- optimized Core
(con (pair integer (list data)) (18446744073709551615, []))
--- optimized UPLC
(program 1.1.0 (con (pair integer (list data)) (18446744073709551615, [])))
--- isolated pass
--- isolated ANF input
(\tag#45 : int fields#46 : list Data -> let anf#48 : Data = constrData tag#45 fields#46 in
case@Data anf#48 of
  DataConstr pair#47 -> pair#47
  _ -> trace "cold" in error) 18446744073709551615 (con (list data) [])
--- isolated folded Core
(\tag#45 : int fields#46 : list Data -> let anf#48 : Data = constrData tag#45 fields#46 in
let pair#47 : pair int (list Data) = unConstrData anf#48 in
pair#47) 18446744073709551615 (con (list data) [])
--- isolated cleaned Core
let anf#48 : Data = constrData 18446744073709551615 (con (list data) []) in
unConstrData anf#48
--- isolated UPLC before
(program 1.1.0
  [[(lam tag_45
    (lam fields_46
      [(lam anf_48
        [(lam generated_49
          (force
            [[[[[[(force (builtin chooseData)) generated_49]
              (delay [(lam pair_47 pair_47) [(builtin unConstrData) generated_49]])]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
              (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
          anf_48])
        [[(builtin constrData) tag_45] fields_46]]))
    (con integer 18446744073709551615)]
    (con (list data) [])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_48 [(builtin unConstrData) anf_48])
    [[(builtin constrData) (con integer 18446744073709551615)] (con (list data) [])]])
--- result
(con (pair integer (list data)) (18446744073709551615, []))
--- logs
[]
